--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -1,29 +1,54 @@
 .signup-container {
   z-index: 10;
-  min-height: 70px;
+  min-height: 80px;
   width: 100%;
   border: 10px black;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 750px;
 }
 
 .signup-card {
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
   background: #F4F6F7;
-  margin-right: 10px;
-  flex: 1;
-  max-width: 500px;
+  max-width: 750px;
+  flex: 8;
+  padding: 10px;
+}
+
+.signup-card-parking {
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+  background: #C5E6A6;
+  max-width: 750px;
+  flex: 8;
+  padding: 10px;
+}
+
+.signup-card-no-parking {
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+  background: #F76C5E;
+  max-width: 750px;
+  flex: 8;
+  padding: 10px;
 }
 
 .signup-card-main-text {
-  font-size: 18px;
+  font-size: 24px;
   font-weight: bold;
+  text-align: center;
+  color: #4A4A4A;
 }
 
+.signup-card-help-text {
+  text-align: center;
+  font-size: 12px;
+}
 .signup-card-description-text {
-  font-size: 10px;
+  font-size: 20px;
 }
 
 .signup-card-rule-text {
@@ -34,17 +59,29 @@
   border: 0.5px solid grey;
 }
 
+.signup-button-container {
+  flex: 1;
+}
+
+.signup-button-container-disabled {
+  flex: 1;
+  opacity: 0.5;
+}
+
 .signup-button {
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-  background: #F4F6F7;
-  font-size: 48px;
-  min-width: 70px;
+  background: #586BA4;
+  font-size: 24px;
+  color: #FFFFFA;
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
   vertical-align: middle;
   text-align: center;
-  margin-right: 5px;
-  margin-left: 10px;
 }
 
 .signup-button-text {
   font-size: 12px;
+  font-weight: bold;
+  /*color: #4A4A4A;*/
 }
