--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: #EBE9E9
+    background-color: #EBE9E9;
 }
 html, body {
     height: 100%;
